course levels and fixes

--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -27,12 +27,13 @@ nl:
       question:
         course_id: "Cursus ID"
         question_type: "Vraagtype"
-        content: "Inhoud"
+        content: "Vraag"
+        image: "Foto"
 
       answer:
         question_id: "Vraag ID"
         correct: "Correct"
-        content: "Inhoud"
+        content: "Antwoord"
         match: "Match"
 
       attempt:
